# Raspberry-Pi-Dashcam

./: CMakeLists.txt
src/: main.cpp  qt.cpp
